# chinese_hackathon_rag_case

./: .gitignore  README.md  pyproject.toml  requirements.txt
.configs/: authorized_key.json
app_rag/: app_rag_main.py  rag_model_bot_env.py  rag_model_gpt.py  rag_model_opensearch.py  rag_model_translate.py  rag_presenter_app_bot.py  rag_view_app_bot.py  rag_view_message_handler.py
docker/: Dockerfile
prototyping/: Untitled.ipynb  YaGPT_notebook(1).ipynb  app_embedding.ipynb
